@@ -18,6 +18,7 @@
 /Mojolicious-Plugin-AssetPack*tar.gz
 /public/packed/
 /t/public/packed/
+t/package-lock.json
 node_modules
 .sass-cache
 .test-everything
