@@ -1,0 +1,4 @@
+import foo from './export.js';
+export default function () {
+  console.log(foo);
+}
