@@ -1,0 +1,9 @@
+import Vue from 'vue'
+import Test from './../vue/Test.vue'
+
+new Vue({
+  el: '#app',
+  components: {
+    'my-test': Test
+  }
+})
