@@ -1,0 +1,9 @@
+<template>
+  <div class="test">x={{x}}</div>
+</template>
+
+<script lang="babel">
+export default {
+  props: ["x"]
+}
+</script>
