@@ -2,6 +2,7 @@ Revision history for perl distribution Mojolicious-Plugin-AssetPack
 
 1.46 Not Released
  - Add "asset_class" attribute to AssetPack::Store
+ - Add rollupjs pipe - https://rollupjs.org/
 
 1.45 2017-06-19T23:49:30+0200
  - Add Developing guide
